...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lGB-55-pHh">
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="startGameButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="150" id="5lx-Ju-aPq"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JFr-Uh-ObW">
                                        <rect key="frame" x="0.0" y="50" width="150" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="howToPlayButton"/>
                                        <connections>
                                            <action selector="didTapHowToPlayButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bUi-DK-pWQ"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZLB-OW-PgI">
                                <rect key="frame" x="315" y="35" width="45" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="switchLanguageButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="45" id="cQe-SC-qLY"/>
...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="howToPlayViewControllerView"/>
                        <constraints>
                            <constraint firstItem="cGz-XM-9IR" firstAttribute="centerX" secondItem="vut-47-aW1" secondAttribute="centerX" id="6cz-BN-IRp"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2zN-a0-JyI">
                                <rect key="frame" x="5" y="25" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerTwoBuzzerButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="McH-fR-irt"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hwc-F1-eJt">
                                <rect key="frame" x="320" y="25" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerThreeBuzzerButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="CpT-9e-MIX"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UiH-fM-8ua">
                                <rect key="frame" x="5" y="612" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerFourBuzzerButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="Qoi-sQ-QFO"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IW7-rK-xm6">
                                <rect key="frame" x="320" y="612" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerOneBuzzerButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="EVt-d5-ker"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1F-dB-iyq">
                                <rect key="frame" x="30" y="85" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerTwoScoreLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5dE-3N-Q7r">
                                        <rect key="frame" x="132.5" y="268.5" width="0.0" height="0.0"/>
                                        <accessibility key="accessibilityConfiguration" identifier="askedWordLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7A-yb-jbh">
                                <rect key="frame" x="30" y="602" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerFourScoreLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oN1-04-8E4">
                                <rect key="frame" x="345" y="602" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="playerOneScoreLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
